--- a/scss/main.scss
+++ b/scss/main.scss
@@ -53,9 +53,18 @@ $margenes2:(
     6: 175px,
 );
 
+$bordes:(
+    1: blue,
+    2: lightblue,
+    3: lightgreen,
+    4: orange,
+    5: red,
+    6: yellow,
+);
+
 .link{
     background-color: #1f1f1f;
-    height: 350px;
+    height: 400px;
     width: 100%;
     display: flex;
     justify-content: space-around;
@@ -72,11 +81,32 @@ $margenes2:(
                 height: 150px;
                 width: 150px;
             }
-            
+            transition: transform 0.3s ease; // transición suave para el efecto
+            &:hover {
+                transform: scale(1.5)  
+            }
+        }
+    }
+    @each $num, $borde in $bordes{
+        .link-imagen-#{$num}{
+            box-shadow: 0 0 15px $borde;
         }
     }
 }
 
+.linea{
+    width: 100%;
+    height: 50px;
+    background-color: #1f1f1f;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    .linea-forma{
+        background-color: lightgray;
+        height: 5px;
+        width: 80%;
+    }
+}
 
 $margenes:(
     1: -50px,
@@ -108,6 +138,8 @@ $margenes:(
     margin: 0;
     padding: 0;
 }
+
+
 
 /*quienes somos*/
 
