--- a/css/main.css
+++ b/css/main.css
@@ -356,11 +356,12 @@
 
 .linea {
   width: 100%;
-  height: 50px;
+  height: 75px;
   background-color: #1f1f1f;
   display: flex;
   justify-content: center;
-  align-items: center; }
+  align-items: center;
+  background-image: linear-gradient(to bottom, #1f1f1f, #878787); }
   .linea .linea-forma {
     background-color: lightgray;
     height: 5px;
@@ -404,7 +405,7 @@
   justify-content: center;
   width: 100%;
   height: 200px;
-  background-color: #1f1f1f;
+  background-color: #878787;
   text-align: center; }
   .cont-info1 h1 {
     color: white;
@@ -422,7 +423,7 @@
       text-shadow: 4px 4px 6px rgba(255, 221, 221, 0.7); }
 
 .cont-decoracion {
-  background-color: #1f1f1f;
+  background-color: #878787;
   display: flex;
   justify-content: space-around;
   align-items: center; }
