--- a/scss/main.scss
+++ b/scss/main.scss
@@ -96,11 +96,12 @@ $bordes:(
 
 .linea{
     width: 100%;
-    height: 50px;
+    height: 75px;
     background-color: #1f1f1f;
     display: flex;
     justify-content: center;
     align-items: center;
+    background-image: linear-gradient(to bottom, #1f1f1f,  #878787);
     .linea-forma{
         background-color: lightgray;
         height: 5px;
@@ -149,7 +150,7 @@ $margenes:(
     justify-content: center;
     width: 100%;
     height: 200px;
-    background-color: #1f1f1f;
+    background-color: #878787;
     text-align: center;
     h1{
         color: white;
@@ -180,7 +181,7 @@ $margenes:(
 
 
 .cont-decoracion{
-    background-color: #1f1f1f;
+    background-color: #878787;
     display: flex;
     justify-content: space-around;
     align-items: center;
