--- a/scss/main.scss
+++ b/scss/main.scss
@@ -1,6 +1,6 @@
 @import "menu";
 @import "tenis";
-
+@import "basquet";
 
 *{
     margin: 0;
@@ -81,7 +81,7 @@ $bordes:(
                 height: 150px;
                 width: 150px;
             }
-            transition: transform 0.3s ease; // transición suave para el efecto
+            transition: transform 0.3s ease;
             &:hover {
                 transform: scale(1.5)  
             }
