--- a/css/main.css
+++ b/css/main.css
@@ -399,7 +399,8 @@
   padding: 0; }
 
 /*quienes somos*/
-.cont-info1 {
+.cont-info1, .nutricion {
+  overflow-x: hidden;
   flex-direction: column;
   display: flex;
   justify-content: center;
@@ -407,18 +408,18 @@
   height: 200px;
   background-color: #878787;
   text-align: center; }
-  .cont-info1 h1 {
+  .cont-info1 h2, .nutricion h2 {
     color: white;
     transition: transform 0.3s ease, text-shadow 0.3s ease; }
-    .cont-info1 h1:hover {
+    .cont-info1 h2:hover, .nutricion h2:hover {
       transform: scale(1.1);
       text-shadow: 4px 4px 6px rgba(255, 221, 221, 0.7); }
-  .cont-info1 p {
+  .cont-info1 p, .nutricion p {
     padding: 0 10% 0 10%;
     color: white;
     text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
     transition: transform 0.3s ease, text-shadow 0.3s ease; }
-    .cont-info1 p:hover {
+    .cont-info1 p:hover, .nutricion p:hover {
       transform: scale(1.1);
       text-shadow: 4px 4px 6px rgba(255, 221, 221, 0.7); }
 
@@ -449,10 +450,14 @@
     .cont-decoracion .imagen3:hover {
       transform: rotate(30deg); }
 
+.nutricion {
+  margin-top: 200px;
+  overflow-x: hidden; }
+
 @media screen and (max-width: 1023px) {
-  .cont-info1 {
+  .cont-info1, .nutricion {
     height: 300px; }
-    .cont-info1 h1 {
+    .cont-info1 h2, .nutricion h2 {
       margin-bottom: 20px; }
   .link {
     height: 1000px; }
