--- a/css/main.css
+++ b/css/main.css
@@ -5,7 +5,7 @@
 
 /* Header */
 #header {
-  background-color: #f8f8f8;
+  background-color: white;
   margin: 0;
   padding: 0; }
 
@@ -45,7 +45,7 @@
 
 /* Header */
 #header {
-  background-color: #f8f8f8;
+  background-color: white;
   margin: 0;
   padding: 0; }
 
@@ -129,36 +129,14 @@
       .contenedorTe-imagen1-info1:hover .contenedorTe-info1 .contenedorTe-info1-p1 {
         color: white; }
 
-/* mapa */
-.contenedorTe-grande-mapa {
+.contenedorTe-espacio-titulo {
   width: 100%;
-  height: 400px;
+  height: 150px;
   display: flex;
-  justify-content: space-between;
-  align-items: center; }
-  .contenedorTe-grande-mapa .contenedorTe-mapa {
-    margin-left: 10px;
-    height: 350px;
-    width: 80%;
-    display: flex;
-    align-items: center; }
-    .contenedorTe-grande-mapa .contenedorTe-mapa iframe {
-      width: 100%;
-      height: 100%; }
-  .contenedorTe-grande-mapa .contenedorTe-text-mapa {
-    width: auto;
-    height: 200px;
-    margin-left: 20px;
-    display: flex;
-    flex-wrap: wrap; }
-    .contenedorTe-grande-mapa .contenedorTe-text-mapa .titulo-mapa {
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      width: 100%;
-      height: 50px; }
-    .contenedorTe-grande-mapa .contenedorTe-text-mapa .parrafo-mapa {
-      color: black; }
+  align-items: center;
+  justify-content: center; }
+  .contenedorTe-espacio-titulo .tituloTe-espacio {
+    color: black; }
 
 .contenedorTe-grande-tarjetas {
   width: 100%;
@@ -172,21 +150,102 @@
   background-size: cover;
   filter: grayscale(100%); }
   .contenedorTe-grande-tarjetas .tarjetaTe {
-    background-color: aqua;
     width: 300px;
     height: 90%;
     display: flex;
     flex-direction: column; }
     .contenedorTe-grande-tarjetas .tarjetaTe .contenedorTe-imagen {
       width: 100%;
-      height: 150px;
-      background-color: red; }
+      height: 150px; }
     .contenedorTe-grande-tarjetas .tarjetaTe .titulo-tarjetaTe {
       width: 100%;
       height: 50px;
       display: flex;
       justify-content: center;
       align-items: center; }
+      .contenedorTe-grande-tarjetas .tarjetaTe .titulo-tarjetaTe h1 {
+        font-size: 0px; }
+    .contenedorTe-grande-tarjetas .tarjetaTe .parrafo-tarjetaTe {
+      width: 100%;
+      height: 100px; }
+      .contenedorTe-grande-tarjetas .tarjetaTe .parrafo-tarjetaTe p {
+        font-size: 0px; }
+  .contenedorTe-grande-tarjetas:hover {
+    filter: saturate(200%) grayscale(0%); }
+    .contenedorTe-grande-tarjetas:hover .tarjetaTe {
+      backdrop-filter: blur(5px);
+      border: solid black 1px; }
+    .contenedorTe-grande-tarjetas:hover .contenedorTe-imagen-1 {
+      background-image: url(../assets/imagenes/cardiovascular.png);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+      height: 150px; }
+    .contenedorTe-grande-tarjetas:hover .titulo-tarjetaTe {
+      background-color: #ebe6e6; }
+      .contenedorTe-grande-tarjetas:hover .titulo-tarjetaTe h1 {
+        font-size: 20px;
+        text-align: center; }
+    .contenedorTe-grande-tarjetas:hover .parrafo-tarjetaTe p {
+      font-size: 16px;
+      color: white; }
+    .contenedorTe-grande-tarjetas:hover .contenedorTe-imagen-2 {
+      background-image: url(../assets/imagenes/saludmental.png);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+      height: 150px; }
+    .contenedorTe-grande-tarjetas:hover .titulo-tarjetaTe {
+      background-color: #ebe6e6; }
+      .contenedorTe-grande-tarjetas:hover .titulo-tarjetaTe h1 {
+        font-size: 20px;
+        text-align: center; }
+    .contenedorTe-grande-tarjetas:hover .parrafo-tarjetaTe p {
+      font-size: 16px;
+      color: white; }
+    .contenedorTe-grande-tarjetas:hover .contenedorTe-imagen-3 {
+      background-image: url(../assets/imagenes/grasacorporal.png);
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
+      height: 150px; }
+    .contenedorTe-grande-tarjetas:hover .titulo-tarjetaTe {
+      background-color: #ebe6e6; }
+      .contenedorTe-grande-tarjetas:hover .titulo-tarjetaTe h1 {
+        font-size: 20px;
+        text-align: center; }
+    .contenedorTe-grande-tarjetas:hover .parrafo-tarjetaTe p {
+      font-size: 16px;
+      color: white; }
+
+/* mapa */
+.contenedorTe-grande-mapa {
+  width: 100%;
+  height: 400px;
+  display: flex;
+  justify-content: space-around;
+  align-items: center; }
+  .contenedorTe-grande-mapa .contenedorTe-mapa {
+    height: 450px;
+    width: 60%;
+    display: flex;
+    align-items: center; }
+    .contenedorTe-grande-mapa .contenedorTe-mapa iframe {
+      width: 100%;
+      height: 100%; }
+  .contenedorTe-grande-mapa .contenedorTe-text-mapa {
+    width: 40%;
+    height: 200px;
+    display: flex;
+    flex-wrap: wrap; }
+    .contenedorTe-grande-mapa .contenedorTe-text-mapa .titulo-mapa {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      width: 80%;
+      height: 50px; }
+    .contenedorTe-grande-mapa .contenedorTe-text-mapa .parrafo-mapa {
+      color: black; }
 
 @media screen and (max-width: 1023px) {
   .contenedorTe-imagen1-info1 {
@@ -199,6 +258,13 @@
       .contenedorTe-imagen1-info1 .contenedorTe-info1 .contenedorTe-info1-p1 {
         margin-top: 50px;
         color: black; }
+  .contenedorTe-grande-tarjetas {
+    height: 1600px;
+    display: flex;
+    flex-wrap: wrap; }
+    .contenedorTe-grande-tarjetas .tarjetaTe {
+      height: 400px;
+      width: 80%; }
   .contenedorTe-grande-mapa {
     display: flex;
     flex-direction: column;
