--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -5,7 +5,7 @@
 
 /* Header */
 #header{
-    background-color: rgb(248, 248, 248);
+    background-color: white;
     margin: 0;
     padding: 0;
 }
