--- a/scss/_tenis.scss
+++ b/scss/_tenis.scss
@@ -65,44 +65,15 @@
     
 }
 
-/* mapa */
-
-.contenedorTe-grande-mapa{
+.contenedorTe-espacio-titulo{
     width: 100%;
-    height: 400px;
+    height: 150px;
     display: flex;
-    justify-content: space-between;
     align-items: center;
-    .contenedorTe-mapa{
-        margin-left: 10px;
-        height: 350px;
-        width: 80%;
-        display: flex;
-        align-items: center;
-        iframe{
-            width: 100%;
-            height: 100%;
-        }
+    justify-content: center;
+    .tituloTe-espacio{
+        color: black;
     }
-    .contenedorTe-text-mapa{
-        width: auto;
-        height: 200px;
-        margin-left: 20px;
-        display: flex;
-        flex-wrap: wrap;
-
-        .titulo-mapa{
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 100%;
-            height: 50px;
-        }
-        .parrafo-mapa{
-            color: black;
-        }
-    }
-
 }
 
 .contenedorTe-grande-tarjetas{
@@ -117,7 +88,6 @@
     background-size: cover;
     filter: grayscale(100%);
     .tarjetaTe{
-        background-color: aqua;
         width: 300px;
         height: 90%;
         display: flex;
@@ -125,7 +95,7 @@
         .contenedorTe-imagen{
             width: 100%;
             height: 150px;
-            background-color: red;
+            
         }
         .titulo-tarjetaTe{
             width: 100%;
@@ -133,8 +103,96 @@
             display: flex;
             justify-content: center;
             align-items: center;
+            h1{
+                font-size: 0px;
+            }
+            
+        }
+        .parrafo-tarjetaTe{
+            width: 100%;
+            height: 100px;
+            p{
+                font-size: 0px;
+            }  
         }
     }
+    &:hover{
+        filter: saturate(200%) grayscale(0%);
+        .tarjetaTe{
+            backdrop-filter: blur(5px);
+            border: solid black 1px;
+        }
+        $imagenesB:(
+            1: url(../assets/imagenes/cardiovascular.png),
+            2: url(../assets/imagenes/saludmental.png),
+            3: url(../assets/imagenes/grasacorporal.png),
+        );
+        @each $num, $imagen in $imagenesB{
+            .contenedorTe-imagen-#{$num}{
+                background-image: $imagen;
+                background-repeat: no-repeat;
+                background-position: center;
+                background-size: cover;
+                height: 150px;
+            }
+            .titulo-tarjetaTe{
+                background-color: #ebe6e6;
+                h1{
+                    font-size: 20px;
+                    text-align: center;
+                }
+            }
+            .parrafo-tarjetaTe{
+                p{
+                    font-size: 16px;
+                    color: white;
+                }
+            }
+
+        }
+    
+    }
+    
+}
+
+
+
+/* mapa */
+
+.contenedorTe-grande-mapa{
+    width: 100%;
+    height: 400px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    .contenedorTe-mapa{
+        height: 450px;
+        width: 60%;
+        display: flex;
+        align-items: center;
+        iframe{
+            width: 100%;
+            height: 100%;
+        }
+    }
+    .contenedorTe-text-mapa{
+        width: 40%;
+        height: 200px;
+        display: flex;
+        flex-wrap: wrap;
+
+        .titulo-mapa{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            width: 80%;
+            height: 50px;
+        }
+        .parrafo-mapa{
+            color: black;
+        }
+    }
+
 }
 
 @media screen and (max-width: 1023px){
@@ -151,6 +209,17 @@
             }
         }
     }
+
+    .contenedorTe-grande-tarjetas{
+        height: 1600px;
+        display: flex;
+        flex-wrap: wrap;
+        .tarjetaTe{
+            height: 400px;
+            width: 80%;
+        }
+    }
+
     .contenedorTe-grande-mapa{
         display: flex;
         flex-direction: column;
