--- a/scss/mainV.scss
+++ b/scss/mainV.scss
@@ -107,7 +107,7 @@ p{
     display: flex;
     justify-content: center;
     background-color: #ffffff;
-    border-radius: ;
+    border-radius: 60%;
 }
 .jugadores{
     text-align: center;
