--- a/scss/main.scss
+++ b/scss/main.scss
@@ -44,6 +44,24 @@
     }
 }*/
 
+.titulo-princ{
+    width: 100%;
+    height: 75px;
+    background-color: #1f1f1f;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    h1{
+        color: white;
+        transition: transform 0.3s ease, text-shadow 0.3s ease;
+        &:hover{
+            transform: scale(1.1);
+            text-shadow: 4px 4px 6px rgba(255, 221, 221, 0.7);
+        }
+    }
+}
+
 $margenes2:(
     1: 175px,
     2: 100px,
@@ -199,11 +217,19 @@ $margenes:(
     }
 }
 
+.linea-2{
+    @extend .linea
+}
+
 .nutricion{
     margin-top: 200px;
     overflow-x: hidden;
     @extend .cont-info1;
     
+}
+
+.nutricion{
+    @extend .titulo-princ;
 }
 
 @media screen and (max-width: 1023px){
