--- a/scss/mainV.scss
+++ b/scss/mainV.scss
@@ -45,11 +45,16 @@ p{
 }
 .padre2{
     background-color: #ffffff;
-    width: 99%;
+    width: 100%;
     border: solid rgba(206, 206, 206, 0.322) 40px;
     margin-left: 12px;
     margin-right: 50px;
-}
+    background-image: url(https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSZlKdpYJ61g-EhM18_KSmbBMShcoQQCkokxQ&s);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+
+    }
 .contvol{
     background-color: #fefdff;
     height: 450px;
