--- a/css/mainV.css
+++ b/css/mainV.css
@@ -83,15 +83,45 @@ p {
   width: 100%; }
 
 .contvol {
-  background-color: #fefdff;
+  background: #07182e;
+  position: relative;
+  display: flex;
+  place-content: center;
+  place-items: center;
+  overflow: hidden;
   height: 450px;
   width: 440px;
-  margin-left: 800px;
+  margin-left: 900px;
   margin-top: 15px;
   border-radius: 10%;
-  transition: transform 0.3 ease; }
-  .contvol:hover {
-    transform: scale 1.2; }
+  z-index: 10; }
+
+.contvol h2 {
+  color: white;
+  font-size: 2em; }
+
+.contvol::before {
+  content: '';
+  position: absolute;
+  width: 100px;
+  background-image: linear-gradient(180deg, #00b7ff, #ff30ff);
+  height: 180%;
+  animation: rotBGimg 3s linear infinite;
+  transition: all 0.2s linear;
+  z-index: 1; }
+
+@keyframes rotBGimg {
+  from {
+    transform: rotate(0deg); }
+  to {
+    transform: rotate(360deg); } }
+
+.contvol::after {
+  content: "";
+  position: absolute;
+  background: #07182e;
+  inset: 5px;
+  border-radius: 15px; }
 
 .contvol-2 {
   background-color: #ffffff;
@@ -104,8 +134,8 @@ p {
 .contvol-3 {
   background-color: #ffffff;
   height: 550px;
-  width: 440px;
-  margin-left: 800px;
+  width: 490px;
+  margin-left: 900px;
   margin-top: 15px;
   border-radius: 6%; }
 
