--- a/scss/mainV.scss
+++ b/scss/mainV.scss
@@ -49,16 +49,48 @@ p{
     width: 100%;
 }
 .contvol{
-    background-color: #fefdff;
+    background: #07182e;
+    position: relative;
+    display: flex;
+    place-content: center;
+    place-items: center;
+    overflow: hidden;
     height: 450px;
     width: 440px;
-    margin-left: 800px;
+    margin-left: 900px;
     margin-top: 15px;
     border-radius: 10%;
-    transition: transform 0.3 ease;
-    &:hover{  
-        transform: scale (1.2);
+    z-index: 10;
+}
+.contvol h2{
+    color: white;
+    font-size: 2em;
+}
+.contvol::before {
+    content: '';
+    position: absolute;
+    width: 100px;
+    background-image: linear-gradient(180deg,
+    rgb(0, 183, 255), rgb(255, 48, 255));
+    height: 180%;
+    animation: rotBGimg 3s linear infinite;
+    transition: all 0.2s linear;
+    z-index: 1;
+}
+@keyframes rotBGimg {
+    from{
+        transform: rotate(0deg);
     }
+    to {
+        transform: rotate(360deg);
+    }
+}
+.contvol::after{
+    content: "";
+    position: absolute;
+    background: #07182e;
+    inset: 5px;
+    border-radius: 15px;
 }
 .contvol-2{
     background-color: #ffffff;
@@ -71,8 +103,8 @@ p{
 .contvol-3{
     background-color: #ffffff;
     height: 550px;
-    width: 440px;
-    margin-left: 800px;
+    width: 490px;
+    margin-left: 900px;
     margin-top: 15px;
     border-radius: 6%;
 }
