--- a/css/mainNat.css
+++ b/css/mainNat.css
@@ -6,7 +6,7 @@
 
 /* Header */
 #header {
-  background-color: #f8f8f8;
+  background-color: white;
   margin: 0;
   padding: 0; }
 
@@ -43,6 +43,9 @@
 * {
   font-family: "Poppins", sans-serif; }
 
+.titulo h1 {
+  text-shadow: 4px 4px 2px white; }
+
 .cont1 {
   display: flex;
   flex-direction: column;
@@ -55,7 +58,7 @@
 .contHijo1 {
   display: flex;
   width: 52%;
-  height: 70%;
+  height: 300px;
   flex-direction: column;
   align-items: center;
   backdrop-filter: blur(10px);
@@ -76,13 +79,11 @@
   width: 70%;
   justify-content: center;
   flex-direction: column;
-  background-color: red;
   text-align: center; }
 
 .contcolum {
   display: flex;
-  flex-direction: row;
-  background-color: blue; }
+  flex-direction: row; }
 
 .columna1, .columna2 {
   display: flex;
@@ -205,7 +206,7 @@
   align-items: center;
   flex-direction: column;
   margin: 30px 0px 0px 0px;
-  background-color: red; }
+  backdrop-filter: blur(50px); }
   .contFut-grande-mapa h1 {
     font-size: 30px;
     color: black;
@@ -216,30 +217,71 @@
     width: 30%;
     height: 3px;
     background-color: black;
-    border-radius: 50px; }
+    border-radius: 50px;
+    margin-bottom: 30px; }
   .contFut-grande-mapa .contfut-mapa {
     display: flex;
     justify-content: center;
     align-items: center;
-    width: 80%; }
+    width: 80%;
+    margin: 0px 0px 60px 0px; }
     .contFut-grande-mapa .contfut-mapa iframe {
       width: 100%; }
+
+/* Cards de consejos */
+.cont {
+  display: flex;
+  justify-content: center;
+  margin: 30px 0px 80px 0px;
+  gap: 60px; }
+
+.card2 {
+  width: 240px;
+  height: 370px;
+  border-radius: 20px;
+  overflow: hidden;
+  border: 8px solid #fff;
+  position: relative; }
+  .card2 img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    border-radius: 15px; }
+  .card2:hover .card2-body {
+    right: 0;
+    transition: 2s; }
+
+.card2-body {
+  width: 100%;
+  height: 100%;
+  top: 0;
+  right: -100%;
+  position: absolute;
+  background: #1f3d4738;
+  backdrop-filter: blur(5px);
+  color: #fff;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  text-align: center; }
+  .card2-body p {
+    font-size: 16px;
+    line-height: 25px;
+    font-weight: 400;
+    margin: 16px 20px 0px 16px; }
 
 /* Carousel */
 input {
   display: none; }
 
 .container {
-  width: 100%;
-  height: 100%;
-  max-width: 600px;
-  max-height: 600px;
   display: flex;
   justify-content: center;
   align-items: center;
   transform-style: preserve-3d;
   flex-direction: column;
-  margin-bottom: 100px; }
+  margin: 100px 0px 0px 100px; }
 
 .cards {
   position: relative;
