1er parte pag nutricion

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -219,18 +219,16 @@ $margenes:(
     }
 }
 
-.linea-2{
-    @extend .linea
-}
+/*.linea-2{
+    @extend .linea;
+}*/
 
-.nutricion{
+
+
+.quienessomos{
     margin-top: 200px;
     overflow-x: hidden;
     @extend .cont-info1;
-    
-}
-
-.nutricion{
     @extend .titulo-princ;
 }
 
@@ -252,3 +250,8 @@ $margenes:(
         }
     }
 }
+
+
+/*PAGINA NUTRICION*/
+
+
