--- a/scss/_nutricion.scss
+++ b/scss/_nutricion.scss
@@ -1,1 +1,74 @@
 @import "menu";
+
+body{
+    background-color: rgb(240, 240, 240);
+}
+
+.nutricion{
+    width: 100%;
+    height: 500px;
+    background-color: #2e5a41;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    .nutricion-info{
+        height: 300px;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        border: 4px solid white;
+        background-color: seagreen;
+        transition: transform 0.3s ease;
+        h1{
+            font-size: 40px;
+            color: #ffffff;
+        }
+        p{
+            margin-top: 20px;
+            color: #ffffff;
+            text-align: start;
+        }
+        &:hover{
+            transform: scale(1.1);
+        }
+    }
+    .nutricion-carrousel{
+        img{
+            height: 400px;
+            border-radius: 25px;
+        }
+        
+    }
+}
+
+.secciones{
+    margin: 50px 0px 50px 0px;
+    text-align: center;
+    h2{
+        font-size: 35px;
+    }
+}
+
+@media screen and (max-width: 1023px){
+    .nutricion{
+        height: 550px;
+        .nutricion-info{
+            display: block;
+            height: 225px;
+            text-align: center;
+            h1{
+                font-size: 28px;
+            }
+            p{
+                text-align: center;
+            }
+        }
+        .nutricion-carrousel{
+            img{
+                height: 250px;
+            }
+            
+        }
+    }
+}
