--- a/css/mainV.css
+++ b/css/mainV.css
@@ -84,7 +84,7 @@ p {
   width: 100%; }
 
 .contvol {
-  background: #07182e;
+  background: #F08080;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -141,7 +141,7 @@ p {
   bottom: 0;
   border-radius: 10%;
   border: 4px solid transparent;
-  background-image: linear-gradient(180deg, #00b7ff, #ff30ff);
+  background-image: linear-gradient(180deg, c, #800000);
   animation: rotate-border 3s linear infinite;
   z-index: 1; }
 
@@ -160,12 +160,12 @@ p {
   right: 5px;
   bottom: 5px;
   border-radius: 10%;
-  background: #07182e;
+  background: #DC143C;
   z-index: 1;
   /* Evita cubrir el contenido interno */ }
 
 .contvol-2 {
-  background: #07182e;
+  background: #FF7F50;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -222,7 +222,7 @@ p {
   bottom: 0;
   border-radius: 10%;
   border: 4px solid transparent;
-  background-image: linear-gradient(180deg, #00b7ff, #ff30ff);
+  background-image: linear-gradient(180deg, #963a3a, #800000);
   animation: rotate-border 3s linear infinite;
   z-index: 1; }
 
@@ -241,12 +241,12 @@ p {
   right: 5px;
   bottom: 5px;
   border-radius: 10%;
-  background: #07182e;
+  background: #DC143C;
   z-index: 1;
   /* Evita cubrir el contenido interno */ }
 
 .contvol-3 {
-  background: #07182e;
+  background: #FF7F50;
   position: relative;
   display: flex;
   flex-direction: column;
@@ -303,7 +303,7 @@ p {
   bottom: 0;
   border-radius: 10%;
   border: 4px solid transparent;
-  background-image: linear-gradient(180deg, #00b7ff, #ff30ff);
+  background-image: linear-gradient(180deg, #963a3a, #800000);
   animation: rotate-border 3s linear infinite;
   z-index: 1; }
 
@@ -322,7 +322,7 @@ p {
   right: 5px;
   bottom: 5px;
   border-radius: 10%;
-  background: #07182e;
+  background: #DC143C;
   z-index: 1;
   /* Evita cubrir el contenido interno */ }
 
@@ -365,4 +365,179 @@ p {
 .mapa {
   display: flex;
   justify-content: center;
-  background-color: #909090; }
+  background-color: #ffffff; }
+
+input {
+  display: none; }
+
+.container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transform-style: preserve-3d;
+  flex-direction: column;
+  margin: 100px 0px 0px 100px; }
+
+.cards {
+  position: relative;
+  height: 500px;
+  width: 430px;
+  margin-bottom: 20px;
+  perspective: 1000px;
+  transform-style: preserve-3d; }
+
+.cards label {
+  position: absolute;
+  border-radius: 15px;
+  width: 400px;
+  left: 0;
+  right: 0;
+  margin: auto;
+  cursor: pointer;
+  transition: transform 0.5s ease; }
+
+.cards .card {
+  position: relative;
+  height: 600px;
+  width: 400px;
+  background-color: #963a3a;
+  border-radius: 10px;
+  padding: 30px 35px;
+  border: 2px solid #800000; }
+
+.cards .image {
+  display: flex;
+  justify-content: space-between; }
+
+.cards .image img {
+  border-radius: 5px;
+  box-shadow: 15px 15px 40px black;
+  margin-top: 23px;
+  width: 86%;
+  height: 220px;
+  object-fit: cover;
+  transition: all 0.7s; }
+
+.cards .image img:hover {
+  transform: scale(1.05); }
+
+.cards .image .dots {
+  text-align: center; }
+
+.dots div {
+  width: 10px;
+  height: 10px;
+  border-radius: 50%;
+  margin-bottom: 10px; }
+
+.dots div:nth-child(1) {
+  background-color: var(--current-color1); }
+
+.dots div:nth-child(2) {
+  background-color: #963a3a; }
+
+.dots div:nth-child(3) {
+  background-color: #800000; }
+
+.card .infos {
+  display: block;
+  text-align: center;
+  padding-top: 60px; }
+
+.card .infos span {
+  display: block; }
+
+.infos .name {
+  font-size: 20px;
+  color: #000000;
+  letter-spacing: 8px;
+  margin-bottom: 20px;
+  padding-left: 25%;
+  transition: all 0.6s ease; }
+
+.card .lorem {
+  font-size: 15.5px;
+  color: #000000;
+  margin: 35px auto; }
+
+.card .btn-details {
+  width: 80%;
+  height: 45px;
+  margin: 35px auto;
+  border-radius: 5px;
+  background-color: #800000;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #fff;
+  font-size: 25px;
+  letter-spacing: 10px;
+  font-weight: 700;
+  transition: all0 0.7s ease; }
+
+.card .btn-details:hover {
+  transform: scale(1.09); }
+
+.card .actions {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-top: 20px; }
+
+.actions i {
+  font-size: 24px;
+  transition: all 0.7s ease;
+  color: var(--current-color2); }
+
+.actions:hover i {
+  transform: scale(1.3); }
+
+#s1:checked ~ .cards #slide4,
+#s2:checked ~ .cards #slide5,
+#s3:checked ~ .cards #slide1,
+#s4:checked ~ .cards #slide2,
+#s5:checked ~ .cards #slide3 {
+  box-shadow: 0 15px 30px #963a3a;
+  transform: translate3d(-70%, 0, -220px);
+  --current-color1: #963a3a;
+  --current-color2: #800000; }
+
+#s1:checked ~ .cards #slide5,
+#s2:checked ~ .cards #slide1,
+#s3:checked ~ .cards #slide2,
+#s4:checked ~ .cards #slide3,
+#s5:checked ~ .cards #slide4 {
+  box-shadow: 0 20px 40px #963a3a;
+  transform: translate3d(-35%, 0, -120px);
+  --current-color1: #963a3a;
+  --current-color2: #800000; }
+
+#s1:checked ~ .cards #slide1,
+#s2:checked ~ .cards #slide2,
+#s3:checked ~ .cards #slide3,
+#s4:checked ~ .cards #slide4,
+#s5:checked ~ .cards #slide5 {
+  box-shadow: 0 25px 50px #963a3a;
+  transform: translate3d(0, 0, 0);
+  --current-color1: #963a3a;
+  --current-color2: #800000; }
+
+#s1:checked ~ .cards #slide2,
+#s2:checked ~ .cards #slide3,
+#s3:checked ~ .cards #slide4,
+#s4:checked ~ .cards #slide5,
+#s5:checked ~ .cards #slide1 {
+  box-shadow: 0 20px 40px #963a3a;
+  transform: translate3d(35%, 0, -120px);
+  --current-color1: #963a3a;
+  --current-color2: #800000; }
+
+#s1:checked ~ .cards #slide3,
+#s2:checked ~ .cards #slide4,
+#s3:checked ~ .cards #slide5,
+#s4:checked ~ .cards #slide1,
+#s5:checked ~ .cards #slide2 {
+  box-shadow: 0 15px 30px #963a3a;
+  transform: translate3d(70%, 0, -220px);
+  --current-color1: #963a3a;
+  --current-color2: #800000; }
