--- a/scss/_basquetball.scss
+++ b/scss/_basquetball.scss
@@ -73,10 +73,10 @@ h3{
     color: rgb(175, 50, 50);
     padding: 25px;
 }
-a{
+.a-footer{
     text-decoration: none;
 }
-a:hover{
+.a-footer:hover{
     color: #f18930;
 }
 
