agrege los jugadores de la pag de basket

--- a/scss/_basquetball.scss
+++ b/scss/_basquetball.scss
@@ -7,3 +7,21 @@
     font-family: "Poppins", sans-serif;
     box-sizing: border-box;
 }
+.padre1{
+    justify-content: space-between;
+    display: flex;
+    text-align: center;
+    background: #FF7F32;
+}
+.Malone{
+    background-color: #FF4500;
+    margin-left: 20px;
+}
+.Barkley{
+    background-color: #FF4500;
+    margin-left: 10px;
+}
+.Jonh{
+    background-color: #FF4500;
+    margin-left: 40px;
+}
