--- a/css/main.css
+++ b/css/main.css
@@ -329,8 +329,7 @@
   margin: 0;
   padding: 0;
   font-family: Arial, Helvetica, sans-serif;
-  font-size: 16px;
-  color: white; }
+  font-size: 16px; }
 
 footer {
   background: #343434;
@@ -395,10 +394,10 @@ h3 {
   color: #af3232;
   padding: 25px; }
 
-a {
+.a-footer {
   text-decoration: none; }
 
-a:hover {
+.a-footer:hover {
   color: #f18930; }
 
 .social-icons i:hover {
@@ -546,6 +545,32 @@ body {
       font-size: 16px;
       margin: 4px 0px 6px 5px;
       color: black; }
+
+.Ho-cont1 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background: url(../assets/imagenes/natP.png) no-repeat center center fixed;
+  background-size: cover;
+  border-top: 1px solid #0e788d85; }
+
+.Ho-contHijo1 {
+  display: flex;
+  width: 52%;
+  height: 300px;
+  flex-direction: column;
+  align-items: center;
+  backdrop-filter: blur(10px);
+  margin: 50px 0px 30px 10px;
+  box-shadow: 1px 1px 5px 1px;
+  border-radius: 10px;
+  text-align: center; }
+  .Ho-contHijo1 h2 {
+    margin: 10px 0px 0px 0px; }
+  .Ho-contHijo1 p {
+    margin: 20px 20px 20px 20px;
+    font-size: 20px; }
 
 * {
   margin: 0;
