faltan cosas basquet

--- a/scss/_basquetball.scss
+++ b/scss/_basquetball.scss
@@ -3,7 +3,6 @@
 
 *{
     margin: 0;
-<<<<<<< HEAD
     border: 0;
     font-family: "Poppins", sans-serif;
     box-sizing: border-box;
@@ -26,12 +25,21 @@
     background-color: #FF4500;
     margin-left: 40px;
 }
-=======
-    padding: 0;
-    font-family: Arial, Helvetica, sans-serif;
-    font-size: 16px;
-    color: white;
+.marco-bas{
+    margin: auto;
 }
+.carrousel{
+    height: 400px;
+    border-radius: 25px;
+    
+}
+
+
+
+
+
+
+
 
 
 footer{
@@ -121,4 +129,3 @@ h3{
     margin: 0;
     font-size: 16px;
 }
->>>>>>> eebb27b185a6cb99fe7a9cc3778c139a679baaf3
